@@ -20,6 +20,7 @@ h3. Developer-Visible Changes
 ** @org.eclipse.sirius.table.model@, re-exported by @org.eclipse.sirius.table@
 ** @org.eclipse.sirius.tree.model@, re-exported by @org.eclipse.sirius.tree@
 * <span class="label label-info">Modified</span> The behavior of arrange at opening has been changed/fixed (only one arrange instead of two for examples). You can refer to "bugzilla 577676":https://bugs.eclipse.org/bugs/show_bug.cgi?id=577676 for more details. Maybe your modeler rely on this "buggy behavior" or maybe some impacts have not yet been detected. If you notice a problem, you can retrieve the previous behavior by setting the system property @org.eclipse.sirius.diagram.ui.disableArrangeAtOpeningChanges@ to @true@. You can also create a specific bugzilla to explain the problem. This system property is temporary and will be removed in one or two versions.
+* <span class="label label-info">Modified</span> The behavior concerning layout of regions container has been improved. You can refer to "bugzilla 576305":https://bugs.eclipse.org/bugs/show_bug.cgi?id=576305 for more details. Maybe your modeler rely on this "buggy behavior" or maybe some impacts have not yet been detected. As a reminder, assembling multiple region containers is not supported. These changes are improving the situation but maybe not in your modeler. If you notice a problem, you can retrieve the previous behavior by setting the system property @org.eclipse.sirius.diagram.ui.disableHStackContainerNewBehavior@ to @true@. You can also create a specific bugzilla to explain the problem. This system property is temporary and will be removed in one or two versions.
 * <span class="label label-danger">Removed</span> **The "Workflow" feature** has been removed . Workflow was experimental and to our knowledge not used in practice. This corresponds to the @org.eclipse.sirius.workflow.*@ and @org.eclipse.sirius.editor.workflow@ plug-ins.
 * <span class="label label-danger">Removed</span> **The server parts which supported the Workflow feature** has been removed too. It was our first experiment in moving Sirius to the web, but this is now replaced by the newly published "Sirius Web":https://www.eclipse.org/sirius/sirius-web.html. This corresponds to all the @org.eclipse.sirius.server.*@ plug-ins.
 
